--- a/crud/package.json
+++ b/crud/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "crud",
+  "name": "crud-edesoft",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
@@ -11,10 +10,18 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.15.3",
+    "bootstrap": "^5.2.0",
+    "font-awesome": "4.7.0",
+    "cra-template-typescript": "1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^11.0.16",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
