--- a/crud/package.json
+++ b/crud/package.json
@@ -13,8 +13,9 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.15.3",
     "bootstrap": "^5.2.0",
-    "font-awesome": "4.7.0",
     "cra-template-typescript": "1.1.2",
+    "font-awesome": "4.7.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
